--- a/scripts/geoMX/geomx_analysis.Rmd
+++ b/scripts/geoMX/geomx_analysis.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(echo = TRUE, root.dir = "C:/Users/Strix/GitRepos/NOD_spt_p
 knitr::opts_knit$set(echo = TRUE, root.dir = "C:/Users/Strix/GitRepos/NOD_spt_pd1")
 ```
 
-## GeoMX analysis
+## Introduction
 
 In this analysis, we looked at various proteins within beta islets of NOD mice age 16-22 weeks of age. The three treatment groups examined include healthy **isotype antibody-treated (IgG)**; **spontaneously diabetic (Spt)**; and **PD-1 blockade-treated diabetic (PD1)** mice. Both IgG and PD1 mice were treated with two doses of 200ug of antibody (anti-PD-1 clone 29F.1A12 or isotype IgG2a control) on days 0,2 before sacrifice on day 4. Pancreata were excised and immediately preserved in 10% formalin for 24h, stored in 70% ethanol, embedded in paraffin, and sectioned for H&E staining or staining with anti-INS or anti-CD45 antibodies. Both CD45 and INS staining was used to differentiate various regions within the islets. Islets were scored as healthy with no immune infiltrate (score 0), per-insulitis (score 1-2), or overt insulitis (score 3-4).
 
@@ -28,15 +28,12 @@ require(nlme, quietly = T) #mixed linear model analysis
 require(ggrepel, quietly = T) #labels for pca plots
 require(tibble, quietly = T) #rownames_to_column function
 require(useful, quietly = T) #corner function to peek at data.frames
+source("scripts/utils.R") #custom color palettes
 ```
 
 ```{r define color palettes}
-treatment_colors <- c("IgG" = "black", 
-                      "Spt" = rgb(253,128,8, maxColorValue = 255), 
-                      "PD1" = rgb(128,0,128, maxColorValue = 255))
-islet_score_colors <- c("Insulitis" = "darkred",
-                  "Peri.insulitis" = "royalblue3",
-                  "Normal" = "seagreen4")
+
+
 ```
 
 Read in the data files. One data file contains the code-friendly protein names, description, and associated mouse genes. Two data files for CD45+ and INS+ regions of interest describing the normalized (using the GeoMX software) quantification of protein expression. The data for the CD45 and ins regions are merged, as they are already distinguished based on staining for CD45 and INS.
@@ -74,6 +71,7 @@ Tally the number of samples to get an idea of what the data looks like. Note tha
 geomx %>% group_by(treatment,islet_score,label) %>% tally() %>% cast(label+islet_score ~ treatment, value = "n", fill = 0)
 geomx <- geomx %>% filter(islet_score != "Normal" & label == "CD45" | label == "INS")
 ```
+## Differences by score and region classification
 
 Examine protein expression broadly across all of the samples based on their region of classification (CD45+ or INS+ region) to confirm that expression levels generally make sense. CD45+ regions should have higher expression of immune-cell associated proteins (CD3e, CD45, CD8a, PD-1, etc.) compared to INS+ regions. Multiple t tests are used with a Benjamini & Hochberg "BH" correction.
 
@@ -159,8 +157,8 @@ p1 <- melted %>%
                                      vjust = 0.5, 
                                      hjust=1),
           axis.title.x = element_blank()) +
-    scale_color_manual(values = islet_score_colors) +
-    scale_fill_manual(values = islet_score_colors) +
+    scale_color_manual(values = custom_colors("islets")) +
+    scale_fill_manual(values = custom_colors("islets")) +
     { if (sum(p1_vals$p.adj < 0.05) > 0) #check if there are any significant p values, otherwise, don't plot any NS
       add_pvalue(p1_vals %>% filter(p.adj < 0.05),  #only plot significant values
                color = "black",
@@ -201,8 +199,8 @@ p2 <- melted %>%
                                      vjust = 0.5, 
                                      hjust=1),
           axis.title.x = element_blank()) +
-    scale_color_manual(values = islet_score_colors) +
-    scale_fill_manual(values = islet_score_colors) +
+    scale_color_manual(values = custom_colors("islets")) +
+    scale_fill_manual(values = custom_colors("islets")) +
     { if (sum(p2_vals$p.adj < 0.05) > 0) #check if there are any significant p values, otherwise, don't plot any NS
       add_pvalue(p2_vals %>% filter(p.adj < 0.05), #only plot significant values
                color = "black",
@@ -216,6 +214,8 @@ p2 <- melted %>%
 
 grid.arrange(p1, p2, nrow=2)
 ```
+
+## PCA analysis
 
 There are no significant differences between CD45+ regions within islets with insulitis vs. peri-insulitis. The only identified differences were between INS+ normal islets (in IgG mice) and those with peri-insulitis or insulitis. Most DE proteins in the INS+ regions are immune cell-associated (CD40, CD45, VISTA, CD11c) which indicates that there is some contamination of these regions with immune infiltrate. However, the immune cells in this region are likely to be associated with the "leading edge" of the infiltrate that are closest to the INS+ cells.
 
@@ -235,13 +235,13 @@ shapes <- shapes[as.numeric(factor(df_for_pca$islet_score))]
 plot(pca_scores$sites[,1],
      pca_scores$sites[,2],
      pch = shapes,
-     col = paste(treatment_colors[df_for_pca$treatment]),
+     col = paste(custom_colors("treatments")[df_for_pca$treatment]),
      xlim = c(-3,3),
      ylim = c(-3,3),
      cex=3)
 ordiellipse(prin_comp, factor(df_for_pca$treatment, levels = c("IgG","Spt","PD1")), 
             conf=0.90, 
-            col = treatment_colors, 
+            col = custom_colors("treatments"), 
             lwd = 2)
 
 #keep data to later plot in ggplot
@@ -273,14 +273,14 @@ shapes <- shapes[as.numeric(factor(df_for_pca$islet_score))]
 plot(pca_scores$sites[,1],
      pca_scores$sites[,2],
      pch = shapes,
-     col = paste(treatment_colors[df_for_pca$treatment]),
+     col = paste(custom_colors("treatments")[df_for_pca$treatment]),
      xlim = c(-4,3),
      ylim = c(-2,4),
      cex=3)
 ordiellipse(prin_comp, 
             factor(df_for_pca$treatment, levels = c("IgG","Spt","PD1")), 
             conf=0.90, 
-            col = treatment_colors, 
+            col = custom_colors("treatments"), 
             lwd = 2)
 
 #gather data for PCA plot in ggplot
@@ -314,7 +314,7 @@ pca_cd45 <- df_all %>%
     geom_point(size = 4, 
                alpha = 0.6) +
     stat_ellipse(level = 0.9) + #90% confidence intervals
-    scale_color_manual(values = treatment_colors) +
+    scale_color_manual(values = custom_colors("treatments")) +
     theme_minimal() +
     theme(panel.grid = element_blank(),
           axis.text = element_blank(),
@@ -334,7 +334,7 @@ pca_ins <- df_all %>%
     geom_point(size = 4, 
                alpha = 0.6) +
     stat_ellipse(level = 0.9) + #90% confidence intervals
-    scale_color_manual(values = treatment_colors) +
+    scale_color_manual(values = custom_colors("treatments")) +
     theme_minimal() +
     theme(panel.grid = element_blank(),
           axis.text = element_blank(),
@@ -359,7 +359,7 @@ weights_cd45 <- pca_weights %>%
     filter(label == "CD45") %>%
     ggplot(aes(x = PC1, y = PC2)) +
     facet_wrap(~ label, scales = "free") +
-    scale_color_manual(values = treatment_colors) +
+    scale_color_manual(values = custom_colors("treatments")) +
     theme_minimal() +
     theme(panel.grid = element_blank(),
           axis.text = element_blank(),
@@ -379,7 +379,7 @@ weights_ins <- pca_weights %>%
     filter(label == "INS") %>%
     ggplot(aes(x = PC1, y= PC2)) +
     facet_wrap(~ label, scales = "free") +
-    scale_color_manual(values = treatment_colors) +
+    scale_color_manual(values = custom_colors("treatments")) +
     theme_minimal() +
     theme(panel.grid = element_blank(),
           axis.text = element_blank(),
@@ -398,40 +398,70 @@ weights_ins <- pca_weights %>%
 grid.arrange(weights_cd45, weights_ins, nrow = 1)
 ```
 
+# Treatment-associated differences
+
 Next, the differences between treatment groups will be analyzed by generating volcano plots. Here is an example of the comparison between PD1 and Spt. There are no significant differences.
 
-```{r Protein expression between treatment groups}
-meltednrml <- melted %>% filter(label == "CD45") %>% dplyr::select(-islet_score)
-meltednrml$treatment <- relevel(meltednrml$treatment, ref = "PD1")
+```{r Protein expression between PD1 and Spt}
+meltednrml <- melted %>% 
+                filter(label == "CD45") %>% #examine the CD45 gated regions
+                filter(!protein %in% c("Rt_IgG2b","Rb_IgG","Rt_IgG2a","CD45","INS","S6","GFP","MHCII","GAPDH","Histone.H3","PanCk")) %>% #remove housekeeping genes and irrelevant genes not in the dataset (GFP is not in this mouse and MHCII is different in NOD)
+                dplyr::select(-islet_score) 
+meltednrml$treatment <- relevel(meltednrml$treatment, ref = "PD1") #use PD1 as the reference group
 df <- data.frame()
 
 for (current_protein in as.character(unique(meltednrml$protein))) {
   tmp <- meltednrml %>% 
-    filter(protein == current_protein)
-  tmp <- data.frame(summary(lme(expression ~ treatment, random = list(~1|mouse, ~1|scan_id), data = tmp))$tTable[-1,]) %>% 
-    rownames_to_column("comparison") %>% 
-    mutate(protein = current_protein, ref = "PD1", comparison = gsub("treatment", "", comparison))
-  df <- rbind(df, tmp)
+            filter(protein == current_protein)
+  tmp <- data.frame(summary(lme(expression ~ treatment, #mixed linear model to look at correlation of expression to treatment group
+                                random = list(~1|mouse, #control for the mouse examined
+                                              ~1|scan_id), #also control for each scan
+                                data = tmp))$tTable[-1,]) %>% 
+          rownames_to_column("comparison") %>% #move the treatment group being compared to a column
+          mutate(protein = current_protein, ref = "PD1", comparison = gsub("treatment", "", comparison)) #clean up
+  df <- rbind(df, tmp) #add the temporary df with one protein to the df with data for all the proteins
 }
 
 avgs <- meltednrml %>% 
-  group_by(treatment,protein) %>% 
-  summarize(avg = mean(expression), .groups = "keep")
+          group_by(treatment, protein) %>% 
+          summarize(avg = mean(expression), .groups = "keep") #calculate the mean expression for each protein within each treatment
 
-tbl <- merge(df, avgs %>% cast(protein~treatment,value = "avg"), by = c("protein"))
-tbl <- tbl %>% mutate(log2FC = ifelse(comparison == "Spt", log2(Spt/PD1), log2(IgG/PD1)))
-pd1_v_spt <- tbl %>% filter(comparison == "Spt")
-pd1_v_spt$p.adj <- p.adjust(pd1_v_spt$p.value, method = "BH")
+tbl <- merge(df, avgs %>% cast(protein ~ treatment, value = "avg"), by = c("protein")) #merge the df with the casted averages (wide format)
+tbl <- tbl %>% mutate(log2FC = ifelse(comparison == "Spt", log2(PD1/Spt), log2(PD1/Spt))) #calculate the log fold change based on the desired comparison
+pd1_v_spt <- tbl %>% 
+              filter(comparison == "Spt") %>% #only select the relevant comparison
+              dplyr::select(-IgG) #remove column containing average values that aren't relevant
+pd1_v_spt$p.adj <- p.adjust(pd1_v_spt$p.value, method = "BH") #adjust the p values using BH
 
+log2FC_cutoff <- 1.25 #define a cutoff log2fc
+pd1_v_spt$log2FC_signif <- case_when(pd1_v_spt$log2FC > log2FC_cutoff ~ "PD1",
+                              pd1_v_spt$log2FC < -log2FC_cutoff ~ "Spt",
+                              TRUE ~ "none")
+
+## PLOT THE DATA
+proteins_of_interest <- c("CTLA4","Ki.67","CD4","Tim3","LAG3","PD.1","CD8a")
 pd1_v_spt %>%
-    ggplot(aes(x=log2FC,y=-log10(p.adj))) + 
-    theme_minimal() + 
-    theme(panel.grid = element_blank(),
-          panel.border = element_rect(color="grey10", fill = NA)) +
-    geom_hline(yintercept = -log10(0.05), color = "grey90") + 
-    geom_vline(xintercept = c(-0.5,0.5), color = "grey90") +
-    geom_point() + 
-    scale_x_continuous(limits = c(-3,3)) +
-    scale_y_continuous(limits = c(0,2)) +
-    geom_text_repel(data = subset(pd1_v_spt, p.adj < 0.5 & abs(log2FC) > 0.5), aes(label=protein))
+  ggplot(aes(x = log2FC, 
+             y = -log10(p.adj),
+             color = log2FC_signif)) + 
+  theme_minimal() + 
+  theme(panel.grid = element_blank(),
+        text = element_text(size = 15),
+        panel.border = element_rect(fill = NA, color = "black")) +
+  labs(x = "Average Log2 Fold Change (PD1 / Spt)",
+       y = expression(-log[10]~(Adjusted~p~value)),
+       title="CD45+ regions") +
+  #geom_hline(yintercept = -log10(0.05), color = "grey90") + 
+  geom_vline(xintercept = c(-log2FC_cutoff, log2FC_cutoff), color = "grey90") +
+  geom_point(size = 2) + 
+  scale_x_continuous(limits = c(-3, 3)) +
+  scale_color_manual(values = custom_colors("treatments")) +
+  #scale_y_continuous(limits = c(0, 1.5)) +
+  geom_label_repel(data = subset(pd1_v_spt, protein %in% proteins_of_interest), aes(label = protein, color = log2FC_signif),
+                   label.size = NA,
+                   label.padding = 0.2, 
+                   na.rm = TRUE,
+                   fill = alpha(c("white"), 0.8), 
+                   size = 7, 
+                   max.overlaps = 50) 
 ```
