--- a/scripts/geoMX/geomx_analysis.Rmd
+++ b/scripts/geoMX/geomx_analysis.Rmd
@@ -453,7 +453,8 @@ pd1_v_spt %>%
        title="CD45+ regions") +
   #geom_hline(yintercept = -log10(0.05), color = "grey90") + 
   geom_vline(xintercept = c(-log2FC_cutoff, log2FC_cutoff), color = "grey90") +
-  geom_point(size = 2) + 
+  geom_point(size = 2, 
+             alpha = 0.6) + 
   scale_x_continuous(limits = c(-3, 3)) +
   scale_color_manual(values = custom_colors("treatments")) +
   #scale_y_continuous(limits = c(0, 1.5)) +
